# 2025-CoDaS-HEP-ML

student_solutions/: 03-convolutional-neural-net (1).ipynb  SS3L.py  carlos_romeor_submission.ipynb  carlos_romero_submission  carlos_romero_submission.ipynb  fork-of-03-convolutional-neural-net.ipynb  lazy-test.ipynb
student_solutions/Jet!/: 03-convolutional-neural-net.ipynb
student_solutions/Mark5/: README.md  codas_kaggle.ipynb  pyproject.toml  train.py
student_solutions/Mark5/preprocessing/: data_prep.ipynb  pca_transformed_features.csv
