[project]
name = "tt-tag"
version = "0.1.0"
description = "ML-based tagging of TT jets in CMS Open Simulation data"
readme = "README.md"
authors = [
    { name = "Mark Murdy", email = "mmurdy@umass.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "awkward",
    "matplotlib",
    "seaborn",
    "scikit-learn"
]

[dependency-groups]
dev = [
    "ipykernel",
    "pre-commit",
    "ruff",
    { include-group = "test" }
]
test = [
    "pytest>7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tt_tag"]

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]

